--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         </header>
         <div class="main-wrapper">
             <section>
+                <audio id="alarm">
+                    <source = src="alarm.mp3" type="audio/mp3">
+                </audio>
                 <form action="#" id='form'>
                     <p>從
                     <input type="text" name="year" size="6">
